playground/notas_tests/invalid/r3-04.hulk
function f(x) => x;
function f(y) => y + 1;
